<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/box_inset_layout_padding"
    android:layout_margin="20dp"
    android:orientation="vertical"
    android:id="@+id/linearLayout"
    tools:context=".WearOSLoginActivity"
    tools:deviceIds="wear">

    <EditText
        android:id="@+id/etUsername1"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:backgroundTint="#C0C0C0"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-condensed"
        android:hint="Username"
        android:importantForAutofill="no"
        android:inputType="text" />
    <EditText
        android:id="@+id/etPassword1"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:backgroundTint="#C0C0C0"
        android:fontFamily="sans-serif-condensed"
        android:hint="Password"
        android:importantForAutofill="no"
        android:inputType="textPassword" />

    <android.widget.Button
        android:id="@+id/btnLogin1"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-condensed"
        android:text="Login" />
</LinearLayout>