<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".ui.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:fontFamily="sans-serif-condensed"
            android:text="Register"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/round_button"
            android:backgroundTint="#C0C0C0"
            android:fontFamily="sans-serif-condensed"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="20dp"
            android:textSize="28sp" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/round_button"
            android:backgroundTint="#C0C0C0"
            android:fontFamily="sans-serif-condensed"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="20dp"
            android:textSize="28sp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/round_button"
            android:backgroundTint="#C0C0C0"
            android:fontFamily="sans-serif-condensed"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textSize="28sp" />

        <android.widget.Button
            android:id="@+id/btnSignup"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/round_button"
            android:backgroundTint="@color/primary"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/tvHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:fontFamily="sans-serif-condensed"
            android:text="Already have an account?"
            android:textSize="28sp"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>